# sail-riscv

./: .clang-format  .clang-tidy  .codespellrc  .editorconfig  .gitignore  .gitmodules  .markdown-link-check.config  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CODE_STYLE.md  CONTRIBUTING.md  Dockerfile  LICENCE  Makefile  Makefile.new  Makefile.old  README.md  build_simulator.sh  build_simulators.sh  config2sail.py  coq-sail-riscv.cmake  coq-sail-riscv.opam  coq-sail-riscv.opam.in  debug_sail.sh  descr  dump.s  gen_vlen.py  help-make  opam  prelude.sail  riscv.sail  riscv_extras.v  riscv_extras_sequential.lem  riscv_sim.c  riscv_sys.sail  sail-riscv.install  sail_config.json  sp1-rv64-build.sh  vtest.py  (+1 more)
benchmarks/: CMakeLists.txt  bench_main.cpp
c_emulator/: CMakeLists.txt  checkpoint_manager.cpp  checkpoint_manager.h  cli_options.cpp  cli_options.h  config.json  config_schema.h.in  config_utils.cpp  config_utils.h  cosimulator.cpp  cosimulator.h  default_config_schema.h.in  dts.cpp  dts.h  elf_loader.cpp  elf_loader.h  file_utils.cpp  file_utils.h  generate_schema_include.cmake  generate_schema_include.cmake.in  jtag_dtm.cpp  jtag_dtm.h  log.h  mem.cpp  mem.h  mem_dump.cpp  mem_dump.h  remote_bitbang.cpp  remote_bitbang.h  reset_vec.s  riscv_callbacks.c  riscv_callbacks.cpp  riscv_callbacks.h  riscv_callbacks_if.cpp  riscv_callbacks_if.h  riscv_callbacks_impl.cpp  riscv_callbacks_impl.h  riscv_callbacks_log.cpp  riscv_callbacks_log.h  riscv_callbacks_rvfi.cpp  (+72 more)
c_emulator/gdb/: README.md  connection.cpp  connection.h  gdb_run_info.h  gdbserver.cpp  gdbserver.h  notes.md  parse_utils.cpp  parse_utils.h  protocol_handler.cpp  protocol_handler.h  requests.cpp  requests.h  responses.cpp  responses.h  target_regs.cpp  target_regs.h  triggers.cpp  triggers.h
c_emulator/gdb_remote/: gdb_arch.h  gdb_arch_riscv.c  gdb_rsp.c  gdb_rsp.h  gdb_utils.c  gdb_utils.h
c_emulator/platform/: .example_event_def.enums.swp  .riscv_events_example.c.swo  .riscv_events_example.c.swp  example_event_def.enums  riscv_events_example.c
config/: CMakeLists.txt  config.json.in  default.json  default_config.h.in  generate_default_config_h.cmake  isa.yaml  isa_RV32.yaml  isa_RV64.yaml  platform.yaml  rv32d.json  rv32im.json  rv64d.json  rv64im.config.json  rv64im.json  rvd.json.in  validate_generated_configs.cmake.in
config/riscv_config2sail/: .gitignore  LICENCE  Makefile  README.md  dune-project  riscv_config2sail.opam
dependencies/CLI11/: CLI11.hpp  CMakeLists.txt
dependencies/asio/: CMakeLists.txt
dependencies/boon/: CMakeLists.txt
dependencies/jsoncons/: CMakeLists.txt
dependencies/softfloat/: CMakeLists.txt  platform.h
libspike/: CMakeLists.txt
model/: CMakeLists.txt  README.md  arithmetic.sail  cheri_insts.sail  cheri_prelude_128.sail  cheri_prelude_common.sail  cheri_types.sail  hex_bits.sail  hex_bits_signed.sail  main.sail  main_rvfi.sail  mapping.sail  prelude.sail  prelude_mapping.sail  prelude_mem.sail  prelude_mem_addrtype.sail  prelude_mem_metadata.sail  range_util.sail  riscv.sail  riscv.sail_project  riscv_addr_checks.sail  riscv_addr_checks_common.sail  riscv_aext_types.sail  riscv_analysis.sail  riscv_base_types.sail  riscv_bext_types.sail  riscv_callbacks.sail  riscv_cfi_types.sail  riscv_clic_control.sail  riscv_clic_mem.sail  riscv_clic_regs.sail  riscv_clic_type.sail  riscv_csr_begin.sail  riscv_csr_end.sail  riscv_csr_ext.sail  riscv_csr_hext.sail  riscv_csr_map.sail  riscv_csrind_regs.sail  riscv_ctr_regs.sail  riscv_debug_module_interface.sail  (+253 more)
model/core/: addr_checks.sail  addr_checks_common.sail  arithmetic.sail  callbacks.sail  csr_access.sail  csr_begin.sail  ext_regs.sail  extensions.sail  flen.sail  float_classify.sail  hypervisor_regs.sail  interrupt_regs.sail  isa_version.sail  mem_addrtype.sail  mem_metadata.sail  mem_type_utils.sail  misa_ext.sail  nmi.sail  pc_access.sail  phys_mem_interface.sail  platform_config.sail  pointer_masking.sail  prelude.sail  prelude_mem.sail  prelude_mem_metadata.sail  range_util.sail  reg_type.sail  regs.sail  rvfi_dii.sail  rvfi_dii_v1.sail  rvfi_dii_v2.sail  softfloat_interface.sail  spec_version.sail  spm_types.sail  sys_regs.sail  types.sail  types_common.sail  types_ext.sail  vlen.sail  vmem_types.sail  (+2 more)
model/debug_module/: debug_module.sail  debug_module_interface.sail  debug_module_regs.sail  debug_module_types.sail  debug_module_utils.sail
model/exceptions/: exception_context.sail  sync_exception.sail  sys_exceptions.sail
model/float/: riscv_float_common.sail  riscv_float_eq.sail
model/main/: main.sail
model/pmp/: pmp_control.sail  pmp_regs.sail
model/postlude/: csr_end.sail  debug_module_handlers.sail  decode_ext.sail  device_tree.sail  fetch.sail  fetch_rvfi.sail  insts_end.sail  model.sail  snapshot.sail  step.sail  step_common.sail  step_ext.sail  validate_config.sail
model/prelude/: errors.sail  prelude.sail
model/softfloat/: riscv_softfloat_common.sail  riscv_softfloat_eq.sail
model/spmp/: spmp_control.sail  spmp_regs.sail  spmp_switch_test.sail
model/sys/: callbacks.sail  inst_retire.sail  insts_begin.sail  mem.sail  mem_utils.sail  platform.sail  pma.sail  simple_interrupt_generator.sail  simple_interrupt_generator_regs.sail  split_access_utils.sail  sys_control.sail  sys_reservation.sail  vmem.sail  vmem_pte.sail  vmem_ptw.sail  vmem_tlb.sail  vmem_utils.sail
model/termination/: termination.sail
model/unit_tests/: test_mstatus.sail  test_pte_update_access_fault.sail
sail_runtime/: CMakeLists.txt  small_int_util.h
test/: CMakeLists.txt  README  README.md  download_riscv_tests.cmake  fp_tests_out.txt  get_perf.py  lean_emulator_test_files.cmake  riscv-tests.url  riscv-vector-tests-v128x32.url  riscv-vector-tests-v128x64.url  riscv-vector-tests-v256x32.url  riscv-vector-tests-v256x64.url  riscv-vector-tests-v512x32.url  riscv-vector-tests-v512x64.url  run_fp_tests.sh  run_test_out.txt  run_tests.sh
test/first_party/: CMakeLists.txt  build.zig  build.zig.zon
test/plic/: crt0.S  link.ld  plic_basic.c
test/riscv-tests/: CMakeLists.txt  README  rv32mi-p-breakpoint.dump  (+701 more)
(+523 files in other folders)
